--- a/website/index.html
+++ b/website/index.html
@@ -64,7 +64,7 @@
             anche gassosa e purtroppo non ha ne odore ne sapore rendendo particolarmente difficile la sua individuazione
             in alcuni casi.
           </p>
-          <div class="columns is-mobile">
+          <div class="columns">
             <div class="column is-narrow">
               <a href="" class="button has-text-primary is-medium">
                 <span>Firma la petizione</span>
