--- a/website/index.html
+++ b/website/index.html
@@ -17,7 +17,7 @@
     <div class="hero-body">
       <div class="columns is-vcentered">
         <div class="column is-three-fifths">
-          <h1 class="title is-1">Diciamo NO al DHMO!</h1>
+          <h1 class="title is-1 mb-6">Diciamo NO al DHMO!</h1>
           <h2 class="subtitle is-3">Bandiamo questa sostanza chimica che uccide ogni anno <a href="">più di mille
               persone</a></u>.
             Creiamo un mondo migliore per noi e le generazioni future!</h2>
