--- a/website/index.html
+++ b/website/index.html
@@ -18,12 +18,13 @@
       <div class="columns is-vcentered">
         <div class="column is-three-fifths">
           <h1 class="title is-1 mb-6">Diciamo NO al DHMO!</h1>
-          <h2 class="subtitle is-3">Bandiamo questa sostanza chimica che uccide ogni anno <a href="">più di mille
+          <h2 class="subtitle is-3">Bandiamo questa sostanza chimica che uccide ogni anno <a
+              href="https://www.shorturl.at/dkmCO">più di mille
               persone</a></u>.
             Creiamo un mondo migliore per noi e le generazioni future!</h2>
           <div class="columns is-mobile">
             <div class="column is-narrow">
-              <a href="" class="button is-primary is-large">
+              <a href="https://www.shorturl.at/dkmCO" class="button is-primary is-large">
                 <span>Firma la petizione</span>
                 <span class="icon">
                   <i class="fa-solid fa-signature"></i>
@@ -66,7 +67,7 @@
           </p>
           <div class="columns">
             <div class="column is-narrow">
-              <a href="" class="button has-text-primary is-medium">
+              <a href="https://www.shorturl.at/dkmCO" class="button has-text-primary is-medium">
                 <span>Firma la petizione</span>
                 <span class="icon">
                   <i class="fa-solid fa-signature"></i>
@@ -122,7 +123,7 @@
           </div>
           <div class="columns is-mobile">
             <div class="column is-narrow">
-              <a href="" class="button is-primary is-medium">
+              <a href="https://www.shorturl.at/dkmCO" class="button is-primary is-medium">
                 <span>Firma la petizione</span>
                 <span class="icon">
                   <i class="fa-solid fa-signature"></i>
@@ -174,7 +175,7 @@
           </div>
           <div class="columns is-mobile">
             <div class="column is-narrow">
-              <a href="" class="button is-danger is-medium">
+              <a href="https://www.shorturl.at/dkmCO" class="button is-danger is-medium">
                 <span>Firma la petizione</span>
                 <span class="icon">
                   <i class="fa-solid fa-signature"></i>
@@ -199,6 +200,19 @@
       </div>
     </div>
   </div>
+  <footer class="footer">
+    <div class="content has-text-centered is-medium">
+      <p>
+        Ti abbiamo convint*? Allora forse ti interesserà sapere che il DHMO o monossido di diidrogeno è più
+        comunemente noto come <a href="https://it.wikipedia.org/wiki/Acqua">ACQUA!</a> Questo è uno <a
+          href="https://www.treccani.it/vocabolario/scherzo/">scherzo</a> creato per
+        mostrare
+        come sia facile manipolare la realtà per far credere alle persone qualcosa di complemtante assurdo! Quando
+        navighi online ricorda sempre di <a href="https://it.wikipedia.org/wiki/Verifica_dei_fatti">verificare</a>
+        quello che leggi prima di darlo per certo.
+      </p>
+    </div>
+  </footer>
 </body>
 
 </html>
