--- a/website/index.html
+++ b/website/index.html
@@ -19,12 +19,12 @@
         <div class="column is-three-fifths">
           <h1 class="title is-1 mb-6">Diciamo NO al DHMO!</h1>
           <h2 class="subtitle is-3">Bandiamo questa sostanza chimica che uccide ogni anno <a
-              href="https://www.shorturl.at/dkmCO">più di mille
+              href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">più di mille
               persone</a></u>.
             Creiamo un mondo migliore per noi e le generazioni future!</h2>
           <div class="columns is-mobile">
             <div class="column is-narrow">
-              <a href="https://www.shorturl.at/dkmCO" class="button is-primary is-large">
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button is-primary is-large">
                 <span>Firma la petizione</span>
                 <span class="icon">
                   <i class="fa-solid fa-signature"></i>
@@ -67,7 +67,7 @@
           </p>
           <div class="columns">
             <div class="column is-narrow">
-              <a href="https://www.shorturl.at/dkmCO" class="button has-text-primary is-medium">
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button has-text-primary is-medium">
                 <span>Firma la petizione</span>
                 <span class="icon">
                   <i class="fa-solid fa-signature"></i>
@@ -75,7 +75,7 @@
               </a>
             </div>
             <div class="column is-narrow is-hidden-mobile">
-              <a href="https://www.shorturl.at/dkmCO" target="_blank"
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"
                 class="button is-white has-background-primary has-text-white is-medium is-outlined">
                 <span>Leggi di più</span>
                 <span class="icon">
@@ -112,18 +112,18 @@
                   href="https://it.wikipedia.org/wiki/Iponatriemia">Iponatriemia</a>
               </li>
               <li>
-                Il DHMO viene regolarmente rilevato nelle biopsie di <a href="https://www.shorturl.at/dkmCO">tumori
+                Il DHMO viene regolarmente rilevato nelle biopsie di <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">tumori
                   pre-cancerosi</a> e di diversi tipi di lesioni.
               </li>
               <li>
-                La sua forma gassosa può causare <a href="https://www.shorturl.at/dkmCO">gravi ustioni o nei casi
+                La sua forma gassosa può causare <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">gravi ustioni o nei casi
                   peggiori la morte</a>.
               </li>
             </ul>
           </div>
           <div class="columns is-mobile">
             <div class="column is-narrow">
-              <a href="https://www.shorturl.at/dkmCO" class="button is-primary is-medium">
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button is-primary is-medium">
                 <span>Firma la petizione</span>
                 <span class="icon">
                   <i class="fa-solid fa-signature"></i>
@@ -131,7 +131,7 @@
               </a>
             </div>
             <div class="column is-narrow is-hidden-mobile">
-              <a href="https://www.shorturl.at/dkmCO" class="button is-primary is-medium is-outlined">
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button is-primary is-medium is-outlined">
                 <span>Leggi di più</span>
                 <span class="icon">
                   <i class="fa-solid fa-glasses"></i>
@@ -168,14 +168,14 @@
               </li>
               <li>
                 Il DHMO può ridurre di molto l'efficienza dei freni delle automobili e più in generale dei veicoli
-                grazie alle sue <a href="https://www.shorturl.at/dkmCO" class="has-text-danger">proprietà fisiche e
+                grazie alle sue <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="has-text-danger">proprietà fisiche e
                   chimiche</a>.
               </li>
             </ul>
           </div>
           <div class="columns is-mobile">
             <div class="column is-narrow">
-              <a href="https://www.shorturl.at/dkmCO" class="button is-danger is-medium">
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button is-danger is-medium">
                 <span>Firma la petizione</span>
                 <span class="icon">
                   <i class="fa-solid fa-signature"></i>
@@ -183,7 +183,7 @@
               </a>
             </div>
             <div class="column is-narrow is-hidden-mobile">
-              <a href="https://www.shorturl.at/dkmCO" target="_blank" class="button is-danger is-medium is-outlined">
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="button is-danger is-medium is-outlined">
                 <span>Leggi di più</span>
                 <span class="icon">
                   <i class="fa-solid fa-glasses"></i>
